--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Hmvccodeigniteruser : Module HMVC Codeigniter For Users" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Hmvccodeigniteruser by ulisesrodriguez</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Hmvccodeigniteruser</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Hmvccodeigniteruser</h1>
+        <p class="header">Module HMVC Codeigniter For Users</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Hmvccodeigniteruser</h1>
-          <h2 id="project_tagline">Module HMVC Codeigniter For Users</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/ulisesrodriguez">ulisesrodriguez</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ulisesrodriguez/HMVCCodeigniterUser/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>Ulises Rodriguez.</h3>
 
 <p>Site      : <a href="http://www.ulisesrodriguez.com">http://www.ulisesrodriguez.com</a><br>
@@ -118,17 +117,12 @@
 <p><img src="http://www.ulisesrodriguez.com/images/Logo.png" width="120" height="60">
 <a href="https://github.com/ulisesrodriguez" class="user-mention">@ulisesrodriguez</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Hmvccodeigniteruser maintained by <a href="https://github.com/ulisesrodriguez">ulisesrodriguez</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -138,7 +132,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
