Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hmvccodeigniteruser by ulisesrodriguez</title>
+    <title>Module users by ulisesrodriguez</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Hmvccodeigniteruser</h1>
+        <h1 class="header">Module users</h1>
         <p class="header">Module HMVC Codeigniter For Users</p>
 
         <ul>
